made training work

--- a/ICT/test.ipynb
+++ b/ICT/test.ipynb
@@ -19,7 +19,8 @@
     }
    ],
    "source": [
-    "from dataloader.LAV_DF import create_lav_df_dataloader, get_train_list, get_lav_df_metadata, read_json\n",
+    "from dataloader.LAV_DF import create_lav_df_dataloader, get_train_list, get_lav_df_metadata\n",
+    "from dataloader.LAV_DF.utils import read_json\n",
     "from localize_fakes import run_inference, extract_fake_periods\n",
     "import numpy as np\n",
     "data_root = \"DATASET/LAV-DF/LAV-DF/LAV-DF\""
